tests/error/apply-delay-to-value.uplc
(program 1.0.0 [ (delay (lam x x)) (con integer 0) ])